--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,5 @@ StubCode.html
 # git remote add origin https://github.com/X8-Nova-X8/Personal-Site.git
 # git branch -M main
 # git add.
-# git commit -m "First Commit"
+# git commit -m "First Commit."
 # git push -u origin main
